--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,6 @@
+<% include partials/header.ejs %>
 <h1>Landing Page!!!!!</h1>
 <h1> Welcome to yelpcamp</h1>
 <a href="/campgrounds">Click to see all campgrounds</a>
+
+<% include partials/footer.ejs %>
