--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,7 +9,10 @@
                 </div>               
                 <div class="form-group">
                     <input class="form-control" type="text" name="image" placeholder="Enter image url" >
-                </div>               
+                </div>    
+                <div class="form-group">
+                    <input class="form-control" type="textbox" name="desc" placeholder="Enter campground description" >
+                </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>               
@@ -17,7 +20,7 @@
             <a href="/campgrounds">Go back </a>
         </div>
     </div>
-</div>
+ 
 
-
-<% include partials/footer %>
+</body>
+</html>
