--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,6 +4,9 @@
     <header class="jumbotron">
         <DIV class="container">    
             <h1 ><%= campground.name %></h1>
+            <p>
+                <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new Comment</a>
+            </p>
         </div>
     </header>  
     <div class="row">
@@ -13,12 +16,16 @@
              </div>
         </div>
         <div class="col-md-6 col-sm-12">
+            <div class="well">
+                
+            
             <h3>Description</h3>
-            <p><%= campground.description %></p>
+            <p><%= campground.description %></p></div>
+            <div class="well">
             <h3>Comments</h3>
             <% campground.comments.forEach(function(comment){ %>
                 <p><strong> <%= comment.author %></strong> - <%= comment.text%></p>
-            <% }); %>
+            <% }); %></div>
         </div>
     </div>
 </div>
