--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,8 @@
     <head>
         <title>YelpCamp</title>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
@@ -15,9 +17,13 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/">Login</a></li> 
-                        <li><a href="/">Sign Up</a></li> 
-                        <li><a href="/">Log Out</a></li> 
+                        <% if(curUser===undefined){ %>
+                            <li><a href="/login">Login</a></li> 
+                            <li><a href="/register">Sign Up</a></li> 
+                        <% }else{ %>
+                            <li><a href="#"> Loged in as <%= curUser.username %></a></li>
+                            <li><a href="/logout">Log Out</a></li> 
+                        <% } %>
                     </ul>
                 </div>
             </div>
