--- a/views/comments/update.ejs
+++ b/views/comments/update.ejs
@@ -1,11 +1,11 @@
 <% include ../partials/header %>
 <div class="container">
     <div class="row" >
-        <h1 style="text-align:center;">Add new Comment for <%= campground.name%></h1>
+        <h1 style="text-align:center;">Edit Comment </h1>
         <div style="width:30%; margin:30px auto; " >
-            <form action="/campgrounds/<%= campground._id %>/comments/" method="post">
+            <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id%>?_method=put" method="post">
                 <div class="form-group">
-                    <textarea class="form-control"  name="comment[text]" placeholder="enter comment text"></textarea>
+                    <textarea class="form-control"  name="comment[text]" placeholder="enter comment text"><%= comment.text %></textarea>
                 </div>               
                 <!--<div class="form-group">-->
                 <!--    <input class="form-control" type="text" name="comment[author]" placeholder="Enter author name" >-->
@@ -15,7 +15,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>               
             </form>
-            <a href="/campgrounds/<%= campground._id %>">Go back </a>
+            <a href="/campgrounds/<%= campground_id %>">Go back </a>
         </div>
     </div>
  
