--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <style>
+          #del-form{
+              display:inline;
+          }
+          #header-btns{
+              float:right;
+          }
+      </style>
     </head>
     <body>
        
